--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --second-text-color: #757575;
     --logo-text-color: #000000;
     --hero-title-color: #ffffff;
+    --background-button-color: #f5f4fa;
 }
 
 body {
@@ -88,8 +89,7 @@ span.accent {
 }
 
 
-.header-mail, 
-.header-tel {
+.header-address {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -97,10 +97,8 @@ span.accent {
     color: var(--second-text-color);
 }
 
-.header-mail:hover, 
-.header-tel:hover,
-.header-mail:focus,
-.header-tel:focus {
+.header-address:hover, 
+.header-address:focus {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -136,14 +134,20 @@ span.accent {
     text-align: center;
     letter-spacing: 0.06em;
     cursor:pointer;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    background-color: var(--accent-color);
     color: var(--hero-title-color);
-    
-
 }
 
 .hero-button:hover, 
 .hero-button:focus {
+    opacity: 0.8;
+    border: 1px solid var(--logo-text-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
     background-color: var(--accent-color);
+    color: var(--hero-title-color);
 }
 
 /*-------------INFO-----------*/
@@ -187,21 +191,28 @@ span.accent {
 /*-------------PORTFOLIO-----------*/
 
 .portfolio-filter {
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
     text-align: center;
     letter-spacing: 0.03em;
+    border-radius: 4px;
     color: var(--main-text-color);
+    background-color: var(--background-button-color);
 }
 
 .portfolio-filter:hover, 
 .portfolio-filter:focus  {
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
     text-align: center;
     letter-spacing: 0.03em;
+    cursor:pointer;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
     color: var(--hero-title-color);
     background-color: var(--accent-color);
 }
@@ -254,8 +265,7 @@ span.accent {
     color: var(--accent-color);
 }
 
-.footer-mail, 
-.footer-tel {
+.foot-address {
     font-style: normal;    
     font-size: 14px;
     line-height: 1.71;
@@ -263,10 +273,8 @@ span.accent {
     color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-mail:hover, 
-.footer-tel:hover,
-.footer-mail:focus, 
-.footer-tel:focus {
+.foot-address:hover, 
+.foot-address:focus {
     font-style: normal;    
     font-size: 14px;
     line-height: 1.71;
